# tech-islands-python

./: .gitignore  readme.md
py-from-zero-to-hero-02/fastapi/app/: Dockerfile  main.py  pyproject.toml
py-from-zero-to-hero-02/fastapi/app/api/: deps.py
py-from-zero-to-hero-02/fastapi/app/api/routes/: sku.py  uom.py
py-from-zero-to-hero-02/fastapi/app/core/: config.py
py-from-zero-to-hero-02/fastapi/app/db/: session.py
py-from-zero-to-hero-02/fastapi/app/models/: __init__.py  sku.py  uom.py
py-from-zero-to-hero-02/fastapi/app/schemas/: sku.py  uom.py
py-from-zero-to-hero-02/fastapi/app/uow/: sku.py  uom.py
py-from-zero-to-hero-02/fastapi/auth/: Dockerfile  gen_keys.py  main.py  pyproject.toml
py-from-zero-to-hero-02/fastapi/auth/api/: deps.py
py-from-zero-to-hero-02/fastapi/auth/api/routes/: auth.py
py-from-zero-to-hero-02/fastapi/auth/db/: session.py
py-from-zero-to-hero-02/fastapi/auth/enums/: roles.py
py-from-zero-to-hero-02/fastapi/auth/models/: __init__.py  user.py
py-from-zero-to-hero-02/fastapi/auth/schemas/: auth.py
py-from-zero-to-hero-02/fastapi/auth/uow/: user.py
py-from-zero-to-hero-02/fastapi/auth/util/: security.py
py-from-zero-to-hero-02/v2/: docker-compose.yml  main.py  pyproject.toml
py-from-zero-to-hero-02/v2/api/: deps.py
py-from-zero-to-hero-02/v2/api/routes/: sku.py  uom.py
py-from-zero-to-hero-02/v2/core/: config.py
py-from-zero-to-hero-02/v2/db/: session.py
py-from-zero-to-hero-02/v2/models/: sku.py  uom.py
py-from-zero-to-hero-02/v2/schemas/: uom.py
py-from-zero-to-hero-02/v2/uow/: sku.py  uom.py
(+118 files in other folders)
